--- a/.gitignore
+++ b/.gitignore
@@ -318,3 +318,4 @@ TSWLatexianTemp*
 
 # USU's thesis guide. Can be found here: https://gradschool.usu.edu/thesis-dissertation-requirements/
 Publication Guide.pdf
+*.tmp
